# vulkan-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  Camera.h  FileReader.h  Makefile  Uniforms.h  Utility.h  Vertex.h  VulkanApp.cpp  VulkanApp.h  compile_commands.json  main.cpp  struct  vkTriangle
Shaders/: comp.spv  frag.spv  shader.comp  shader.frag  shader.vert  vert.spv
docs/: vulkan-architecture.md
include/: VulkanApp.h
include/Core/: VulkanContext.h  VulkanDebug.h
include/VulkanApp/: Renderer.h  VulkanApp.h
include/VulkanApp/Commands/: CommandManager.h
include/VulkanApp/Core/: SwapChain.h  VulkanContext.h
include/VulkanApp/RayTracing/: Intersection.h  Ray.h
include/VulkanApp/RayTracing/Objects/: Light.h  Object.h  Sphere.h
include/VulkanApp/Rendering/: ComputeDescriptor.h  ComputePipeline.h  Descriptors.h  Pipeline.h  RenderPass.h
include/VulkanApp/Resources/: Buffer.h  Image.h  ImageFactory.h  Mesh.h  Vertex.h
include/VulkanApp/Sync/: SyncObjects.h
include/VulkanApp/Utils/: FileReader.h  Uniforms.h  Utility.h
src/: VulkanApp.cpp  main.cpp
src/Commands/: CommandManager.cpp
src/Core/: SwapChain.cpp  VulkanContext.cpp  VulkanDebug.cpp
src/Rendering/: ComputeDescriptor.cpp  ComputePipeline.cpp  Descriptors.cpp  Pipeline.cpp  RenderPass.cpp
src/Resources/: Buffer.cpp  Image.cpp  Mesh.cpp
src/Sync/: SyncObjects.cpp
